--- a/viewpanel/templates/base.html
+++ b/viewpanel/templates/base.html
@@ -18,7 +18,15 @@
     <body>
         {% block body %}
         {% endblock %}
-
+	{% block footer %}
+	<div class="navbar navbar-default navbar-fixed-bottom">
+	  <div class="container-fluid">
+            <div class="col-md-5 col-md-offset-5">
+              <div class="clock"></div>
+            </div>
+	  </div>
+	</div>
+	{% endblock %}
         <!--scripts-->
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) Added at the end so the page loads faster-->
         <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
