--- a/viewpanel/templates/login.html
+++ b/viewpanel/templates/login.html
@@ -1,4 +1,91 @@
 {% extends 'base.html' %}
 {% include 'menu.html' %}
-{% include 'login_static.html' %}
-{% include 'flipclock.html' %}
+{% block body %}
+<div class="container">
+  <div id="loginbox" style="margin-top:100px;" class="mainbox col-md-5 col-md-offset-4 ">
+    <div class="panel panel-default" >
+      <div class="panel-heading">
+        <h3 class="panel-title">Sign in</h3>
+      </div>
+      <div style="padding-top:30px" class="panel-body" >
+        <form id="loginform" class="form-horizontal" role="form" method="post">
+          <div style="margin-bottom: 25px" class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+            <input id="login-username" type="text" class="form-control" name="loginname" placeholder="username">
+          </div>
+          <div style="margin-bottom: 25px" class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+            <input id="login-password" type="password" class="form-control" name="loginpass" placeholder="password">
+          </div>
+          <div class="input-group">
+            <div class="checkbox">
+              <label>
+                <input id="login-remember" type="checkbox" name="loginremember" value="1"> Remember me
+              </label>
+            </div>
+          </div>
+	  {% if error %}
+	  <p class="error"><strong>Error:</strong> {{ error }}
+	    {% endif %}
+            <div style="margin-top:10px" class="form-group">
+              <!-- Button -->
+              <div class="col-sm-12 controls">
+                <input type="submit" id="btn-login" class="btn btn-info btn-lg btn-block" value="Login">
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="col-md-12 control">
+                <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%; align:center; " >
+                  <a href="#" onClick="$('#loginbox').hide(); $('#signupbox').show()">
+                    Request account
+                  </a>
+                </div>
+              </div>
+            </div>
+        </form>
+      </div>
+    </div>
+  </div>
+  <div id="signupbox" style="display:none; margin-top:100px;" class="mainbox col-md-5 col-md-offset-4 col-sm-8 col-sm-offset-2">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title">Sign up</h3>
+      </div>
+      <div style="padding-top:30px" class="panel-body" >
+        <form id="signupform" class="form-horizontal" role="form" method="post">
+          <div id="signupalert" style="display:none" class="alert alert-danger">
+            <p>Error:</p>
+            <span></span>
+          </div>
+          <div style="margin-bottom: 25px" class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+            <input id="signup-email" type="text" class="form-control" name="signemail" placeholder="Email">
+          </div>
+          <div style="margin-bottom: 25px" class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+            <input id="signup-user" type="text" class="form-control" name="signuser" placeholder="Username">
+          </div>
+          <div style="margin-bottom: 25px" class="input-group">
+            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+            <input id="signup-pass" type="text" class="form-control" name="signpass" placeholder="Password">
+          </div>
+          <div style="margin-top:10px" class="form-group">
+            <!-- Button -->
+            <div class="col-sm-12 controls">
+              <input type="submit" id="btn-signup" class="btn btn-info btn-lg btn-block" value="Sign Up">
+            </div>
+          </div>
+          <div class="form-group">
+            <div class="col-md-12 control">
+              <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%; align:center; " >
+                <a href="#" onClick="$('#signupbox').hide(); $('#loginbox').show()"> Sign in</a>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+{% endblock %}
