--- a/viewpanel/templates/menu.html
+++ b/viewpanel/templates/menu.html
@@ -21,7 +21,7 @@
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
                         <a href= "#" class="dropdown-toggle" data-toggle="dropdown">
-                            <i class="glyphicon glyphicon-globe"></i>
+                            <i class="glyphicon glyphicon-dashboard"></i>
                             Live Feed<b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
@@ -49,6 +49,18 @@
                             <li><a href="#">Customize</a></li>
                         </ul>
                     </li>
+		    <li class=dropdown>
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <i class="glyphicon glyphicon-globe"></i>
+                        Control Panel<b class="caret"></b>
+                      </a>
+                      <ul class="dropdown-menu">
+                        <li><a href="/cpanel">Application Settings</a></li>
+                        <li><a href="#">User Settings</a></li>
+                        <li><a href="#">Customize SDA</a></li>
+                        <li><a href="#">Customize</a></li>
+                      </ul>
+                    </li>
                     <li class=dropdown>
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             <i class="glyphicon glyphicon-time"></i>
@@ -60,7 +72,6 @@
                         </ul>
                     </li>
                 </ul>
-
                 <form class="navbar-form navbar-right" role="search">
                     <div class="form-group">
                       <input type="text" class="form-control" placeholder="Ticket number">
@@ -72,12 +83,11 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
 		      <i class="glyphicon glyphicon-user"></i>
 		      {% block body %}
-		          {% print g.user %}
-		          {% if g.user %}
-                              {% print g.user %}
-		          {% else %}
-                              {% print "Login" %}
-		          {% endif %}
+		      {% if g.user %}
+                      {{ g.user }}
+		      {% else %}
+                      {{"Login"}}
+		      {% endif %}
 		      {% endblock%}
 		      <b class="caret"></b></a>
                     <ul class="dropdown-menu">
