--- a/viewpanel/templates/menu.html
+++ b/viewpanel/templates/menu.html
@@ -63,13 +63,13 @@
                       </ul>
                     </li>
                     <li class=dropdown>
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <i class="glyphicon glyphicon-time"></i>
-                            Time zones<b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/timezones">View</a></li>
-                        </ul>
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                        <i class="glyphicon glyphicon-time"></i>
+                        Time zones<b class="caret"></b>
+                      </a>
+                      <ul class="dropdown-menu">
+                        <li><a href="/timezones">View</a></li>
+                      </ul>
                     </li>
                 </ul>
                 <form class="navbar-form navbar-right" role="search">
@@ -83,10 +83,10 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
 		      <i class="glyphicon glyphicon-user"></i>
 		      {% block body %}
-		      {% if g.user %}
-                      {{ g.user }}
-		      {% else %}
-                      {{"Login"}}
+		      {% if g.user !=''  %}
+                      {{g.user}}
+		      {% else  %}
+		      {{"Nothing"}}
 		      {% endif %}
 		      {% endblock%}
 		      <b class="caret"></b></a>
