--- a/viewpanel/templates/base.html
+++ b/viewpanel/templates/base.html
@@ -10,7 +10,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon"  href="{{ url_for('static', filename='img/favicon.ico') }}"/>
         <!--styles-->
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}"/>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.css') }}"/>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/custom.css') }}"/>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/flipclock.css') }}"/>
     </head>
