--- a/servicedeskaid/templates/base.html
+++ b/servicedeskaid/templates/base.html
@@ -10,18 +10,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon"  href="{{ url_for('static', filename='img/favicon.ico') }}"/>
         <!--styles-->
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}"/>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/materialize.min.css') }}"/>
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/flipclock.css') }}"/>
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/custom.css') }}"/>
     </head>
-
     <body>
         {% block body %}
         {% endblock %}
         <!--scripts-->
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) Added at the end so the page loads faster-->
         <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
-        <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='js/materialize.min.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static', filename='js/flipclock.min.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static', filename='js/clock.js') }}"></script>
     </body>
