--- a/servicedeskaid/templates/menu.html
+++ b/servicedeskaid/templates/menu.html
@@ -1,105 +1,11 @@
-<div class="container-fluid">
-    <nav class="navbar navbar-default" id="menubar" role="navigation">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse"
-                        data-target="#menu-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <div class="pull-left">
-                    <img class="menubar-logo" src="{{ url_for('static', filename='img/favicon.ico') }}"/>
-                    <a class="navbar-brand" href="/">Service Desk Aid</a>
-                </div>
-
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="menu-collapse">
-                <ul class="nav navbar-nav">
-                    <li class="dropdown">
-                        <a href= "#" class="dropdown-toggle" data-toggle="dropdown">
-                            <i class="glyphicon glyphicon-dashboard"></i>
-                            Live Feed<b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu">
-			  <li><a href="/viewpanel">Open new issue</a></li>
-			  <li><a href="/viewpanel">Search Issue</a></li>
-                          <li><a href="/viewpanel">View open</a></li>
-                          <li><a href="/viewpanel">Recently closed</a></li>
-                        </ul>
-                    </li>
-                    <li class=dropdown>
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <i class="glyphicon glyphicon-list"></i>
-                            Users<b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/users">View Users</a></li>
-                            <li><a href="/">Wall</a></li>
-                        </ul>
-                    </li>
-                    <li class=dropdown>
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <i class="glyphicon glyphicon-stats"></i>
-                            Statistics<b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/statistic">View</a></li>
-                        </ul>
-                    </li>
-		    <li class=dropdown>
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <i class="glyphicon glyphicon-globe"></i>
-                        Control Panel<b class="caret"></b>
-                      </a>
-                      <ul class="dropdown-menu">
-                        <li><a href="/cpanel">Application Settings</a></li>
-                        <li><a href="#">User Settings</a></li>
-			<li><a href="#">DB Settings</a></li>
-                        <li><a href="#">Visual Settings</a></li>
-                      </ul>
-                    </li>
-                    <li class=dropdown>
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <i class="glyphicon glyphicon-time"></i>
-                        Time zones<b class="caret"></b>
-                      </a>
-                      <ul class="dropdown-menu">
-                        <li><a href="/timezones">View</a></li>
-                      </ul>
-                    </li>
-                </ul>
-                <form class="navbar-form navbar-right" role="search">
-                    <div class="form-group">
-                      <input type="text" class="form-control" placeholder="Ticket number">
-                        <button type="submit" class="btn btn-default">Search</button>
-                    </div>
-                </form>
-                <ul class="nav navbar-nav navbar-right">
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-		      <i class="glyphicon glyphicon-user"></i>
-		      {% block body %}
-		      {% if g.user !=''  %}
-                      {{g.user}}
-		      {% else  %}
-		      {{"Nothing"}}
-		      {% endif %}
-		      {% endblock%}
-		      <b class="caret"></b></a>
-                    <ul class="dropdown-menu">
-                      <li><a href="/login">Sign In</a></li>
-                      <li><a href="#">Customize</a></li>
-                      <li><a href="#">Logout</a></li>
-                    </ul>
-                  </li>
-                </ul>
-                <!-- /.navbar-collapse -->
-            </div>
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
-</div>
+<nav>
+  <div class="nav-wrapper">
+    <a href="#!" class="brand-logo">ServicedeskAid</a>
+    <ul class="right hide-on-med-and-down">
+      <li><a href="sass.html"><i class="mdi-action-search"></i></a></li>
+      <li><a href="components.html"><i class="mdi-action-view-module"></i></a></li>
+      <li><a href="javascript.html"><i class="mdi-navigation-refresh"></i></a></li>
+      <li><a href="mobile.html"><i class="mdi-navigation-more-vert"></i></a></li>
+    </ul>
+  </div>
+</nav>
