--- a/servicedeskaid/templates/signup.html
+++ b/servicedeskaid/templates/signup.html
@@ -26,6 +26,11 @@
         <label for="email">Email</label>
       </div>
     </div>
+    <div>
+        <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+            <i class="mdi-content-send right"></i>
+        </button>
+    </div>
   </form>
 </div>
 </div>
