--- a/servicedeskaid/templates/signup.html
+++ b/servicedeskaid/templates/signup.html
@@ -6,12 +6,16 @@
   <form class="col s6">
     <div class="row">
       <div class="input-field col s6">
-        <input placeholder="Placeholder" id="first_name" type="text" class="validate">
+        <input id="first_name" type="text" class="validate">
         <label for="first_name">First Name</label>
       </div>
       <div class="input-field col s6">
         <input id="last_name" type="text" class="validate">
         <label for="last_name">Last Name</label>
+      </div>
+      <div class="input-field col s12">
+            <input id="user_name" type="text" class="validate">
+        <label for="user_name">User Name</label>
       </div>
     </div>
     <div class="row">
@@ -27,7 +31,7 @@
       </div>
     </div>
     <div>
-        <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+        <button class="btn waves-effect waves-light" type="submit" name="action">Signup
             <i class="mdi-content-send right"></i>
         </button>
     </div>
