--- a/servicedeskaid/static/css/custom.css
+++ b/servicedeskaid/static/css/custom.css
@@ -1,15 +1,6 @@
-.menubar-logo {
-    margin-top:10px;
-    margin-bottom:20px;
-    margin-right:10px;
-    width:30px;
-    height:25px;
-    float: left;
-    padding-left:2px;
-}
-
-#menubar {
-    height: 15px;
+#signup-form {
+    padding-top: 10%;
+    text-align: center;
 }
 
 .clock {
@@ -21,12 +12,12 @@
     /zoom: .3;/
 	    transform: scale(.14);
     -ms-transform: scale(.14); /* IE 9 /
--webkit-transform: scale(.14); / Safari and Chrome /
--o-transform: scale(.14); / Opera /
--moz-transform: scale(.14); / Firefox */
-    
+      -webkit-transform: scale(.14); / Safari and Chrome /
+      -o-transform: scale(.14); / Opera /
+      -moz-transform: scale(.14); / Firefox */
 }
 
 .flip-clock-wrapper {
     position: relative;
 }
+
