--- a/servicedeskaid/templates/base.html
+++ b/servicedeskaid/templates/base.html
@@ -15,8 +15,10 @@
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/custom.css') }}"/>
     </head>
     <body>
+      <div class="container">
         {% block body %}
         {% endblock %}
+      </div>
         <!--scripts-->
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) Added at the end so the page loads faster-->
         <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
