--- a/servicedeskaid/templates/menu.html
+++ b/servicedeskaid/templates/menu.html
@@ -2,10 +2,10 @@
   <div class="nav-wrapper light-blue lighten-3">
     <a href="#!" class="brand-logo">ServicedeskAid</a>
     <ul class="right hide-on-med-and-down">
-      <li><a href="sass.html"><i class="mdi-action-search"></i></a></li>
-      <li><a href="components.html"><i class="mdi-action-view-module"></i></a></li>
-      <li><a href="javascript.html"><i class="mdi-navigation-refresh"></i></a></li>
-      <li><a href="mobile.html"><i class="mdi-navigation-more-vert"></i></a></li>
+      <li><a href="#"><i class="mdi-action-search"></i></a></li>
+      <li><a href="#"><i class="mdi-action-view-module"></i></a></li>
+      <li><a href="#"><i class="mdi-navigation-refresh"></i></a></li>
+      <li><a href="#"><i class="mdi-navigation-more-vert"></i></a></li>
     </ul>
   </div>
 </nav>
