--- a/servicedeskaid/templates/signup.html
+++ b/servicedeskaid/templates/signup.html
@@ -2,40 +2,40 @@
 {% include 'menu.html' %}
 {% block body %}
 <div class="container">
-<div class="row">
-  <form class="col s6">
-    <div class="row">
-      <div class="input-field col s6">
-        <input id="first_name" type="text" class="validate">
-        <label for="first_name">First Name</label>
+  <div id="signup-form">
+    <form class="col s6">
+      <div class="row">
+	<div class="input-field col s6">
+          <input id="first_name" type="text" class="validate">
+          <label for="first_name">First Name</label>
+	</div>
+	<div class="input-field col s6">
+          <input id="last_name" type="text" class="validate">
+          <label for="last_name">Last Name</label>
+	</div>
+	<div class="input-field col s12">
+          <input id="user_name" type="text" class="validate">
+          <label for="user_name">User Name</label>
+	</div>
       </div>
-      <div class="input-field col s6">
-        <input id="last_name" type="text" class="validate">
-        <label for="last_name">Last Name</label>
+      <div class="row">
+	<div class="input-field col s12">
+          <input id="password" type="password" class="validate">
+          <label for="password">Password</label>
+	</div>
       </div>
-      <div class="input-field col s12">
-            <input id="user_name" type="text" class="validate">
-        <label for="user_name">User Name</label>
+      <div class="row">
+	<div class="input-field col s12">
+          <input id="email" type="email" class="validate">
+          <label for="email">Email</label>
+	</div>
       </div>
-    </div>
-    <div class="row">
-      <div class="input-field col s12">
-        <input id="password" type="password" class="validate">
-        <label for="password">Password</label>
-      </div>
-    </div>
-    <div class="row">
-      <div class="input-field col s12">
-        <input id="email" type="email" class="validate">
-        <label for="email">Email</label>
-      </div>
-    </div>
-    <div>
+      <div>
         <button class="btn waves-effect waves-light" type="submit" name="action">Signup
-            <i class="mdi-content-send right"></i>
+          <i class="mdi-content-send right"></i>
         </button>
-    </div>
-  </form>
-</div>
+      </div>
+    </form>
+  </div>
 </div>
 {% endblock %}
