--- a/servicedeskaid/templates/login.html
+++ b/servicedeskaid/templates/login.html
@@ -2,15 +2,16 @@
 {% include 'menu.html' %}
 {% block body %}
  <div class="row">
-    <form class="col s12">
-      <div class="row">
+    <form class="col s12" action="" method="post" name="login">
+    {{ form.hidden_tag() }}
+       <div class="row">
         <div class="input-field col s6">
           <input placeholder="Placeholder" id="first_name" type="text" class="validate">
-          <label for="first_name">First Name</label>
+          <label for="first_name">{{ form.openid(size=80) }}</label>
         </div>
         <div class="input-field col s6">
           <input id="last_name" type="text" class="validate">
-          <label for="last_name">Last Name</label>
+          <label for="last_name">{{ form.remember_me }}</label>
         </div>
       </div>
       <div class="row">
