--- a/servicedeskaid/templates/menu.html
+++ b/servicedeskaid/templates/menu.html
@@ -1,6 +1,6 @@
 <nav>
   <div class="nav-wrapper light-blue lighten-3">
-    <a href="#!" class="brand-logo">ServicedeskAid</a>
+    <a href="/" class="brand-logo">ServicedeskAid</a>
     <ul class="right hide-on-med-and-down">
       <li><a href="#"><i class="mdi-action-search"></i></a></li>
       <li><a href="#"><i class="mdi-action-view-module"></i></a></li>
